--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,12 @@ body{
 .mo{
   border: 2px solid black;
   width: 50%;
+  display: flex;
   height: 600px;
+  border-radius: 0 10px 10px 0;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .logo{
   margin-right: 900px;
