--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,18 @@ body{
   align-items: center;
   justify-content: center;
 }
+.mo-button{
+  height: 100px;
+  width: 350px;
+  background: linear-gradient(109.6deg, rgb(255, 219, 47) 11.2%, rgb(244, 253, 0) 100.2%);
+  color: white;
+  font-size: 50px;
+  font-family: jazz-LET,fantasy;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .main {
   background: linear-gradient(to top, lightgrey 0%, lightgrey 1%, #e0e0e0 26%, #efefef 48%, #d9d9d9 75%, #bcbcbc 100%);
   padding: 20px;
@@ -53,7 +65,9 @@ body{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
+  background-image: url(assets/musicbackground.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .mo{
   border: 2px solid black;
@@ -108,3 +122,4 @@ a:hover {
 a:active {
   text-decoration: none;
 }
+
