--- a/css/music.css
+++ b/css/music.css
@@ -24,6 +24,7 @@ header {
 main {
   display: grid;
   grid-template-rows: 1fr 1fr;
+  background-color: #30302f;
 }
 @import url('https://fonts.googleapis.com/css?family=Rock+Salt');
 
@@ -35,8 +36,10 @@ main {
   font-size: 51px;
   letter-spacing: 2px;
   word-spacing: 1px;
-  color: black;
-  background-color: white;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .genre-container {
   display: flex;
@@ -51,11 +54,11 @@ main {
   padding: 10px;
   border: 1px solid black;
   border-radius: 50%;
-  background-color: #f0f0f0;
   font-size: 50px;
   font-family: jazz-LET, fantasy;
   margin-right: 20px; /* Added margin-right property to create a gap between genre divs */
   padding: 50px;
+
 }
 
 footer {
@@ -90,8 +93,6 @@ a:active {
   text-decoration: none;
 }
 
-.genre :hover{
-  background-color: #f0f0f0;
-  color: #f0f0f0;
-  transition: 0.5s;
+button :hover{
+
 }
