--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,9 @@ body{
   align-items: center;
   justify-content: center;
   background-image: url("../assets/wallpapersden.com_anime-girl-looking-for-sunset_1952x1120.jpg");
-  background-size: 1120px; 
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; 
 }
 .logo{
   margin-right: 900px;
