--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body{
 .mo-button{
   height: 100px;
   width: 350px;
-  background: linear-gradient(109.6deg, rgb(255, 219, 47) 11.2%, rgb(244, 253, 0) 100.2%);
+  background: #8109b7;
   color: white;
   font-size: 50px;
   font-family: jazz-LET,fantasy;
@@ -44,6 +44,9 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
+  border: solid black;
+  border-radius: 15px;
+  position: top;
 }
 .main {
   background: linear-gradient(to top, lightgrey 0%, lightgrey 1%, #e0e0e0 26%, #efefef 48%, #d9d9d9 75%, #bcbcbc 100%);
@@ -84,10 +87,10 @@ body{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url("../assets/wallpapersden.com_anime-girl-looking-for-sunset_1952x1120.jpg");
+  background-image: url("../assets/illustrate-tokyo-city-by-night-with-anime-mangastyle-drawings-featuring-city-views-vibrant-purple-neon-lights-generative-ai_379823-7278.avif");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center; 
+  background-position: right center; 
 }
 .logo{
   margin-right: 900px;
