--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body{
   background-image: url("../assets/illustrate-tokyo-city-by-night-with-anime-mangastyle-drawings-featuring-city-views-vibrant-purple-neon-lights-generative-ai_379823-7278.avif");
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: right center; 
+  background-position: center;
 }
 .logo{
   margin-right: 900px;
