--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,14 @@ body{
   text-align: center;
 }
 
+.textMo{
+font-size: 40px;
+font-family: Arial, Helvetica, sans-serif;
+padding: 50px;
+text-align: center;
+color: white;
+}
+
 .dao {
   border: 2px solid black;
   width: 50%;
