--- a/css/style.css
+++ b/css/style.css
@@ -48,10 +48,10 @@ body{
   border-radius: 15px;
   position: top;
   transition: all 0.2s ease-in-out;
-  box-shadow: 0 0 10px 5px #ad48e0,
+  box-shadow: 0 0 10px 5px #e0c0f0,
               0 0 20px 7px #ebecca,
               0 0 25px 20px #8a2be2,
-              0 0 30px 25px #ff1493;
+              0 0 30px 25px #f32ea4;
 }
 .main {
   background: linear-gradient(to top, lightgrey 0%, lightgrey 1%, #e0e0e0 26%, #efefef 48%, #d9d9d9 75%, #bcbcbc 100%);
@@ -74,7 +74,7 @@ body{
 
 @-webkit-keyframes glow {
   from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #3421a0, 0 0 40px #030203, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
   }
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
@@ -90,8 +90,7 @@ text-align: justify;
 -webkit-animation: glow 1s ease-in-out infinite alternate;
 -moz-animation: glow 1s ease-in-out infinite alternate;
 animation: glow 1s ease-in-out infinite alternate;
-color: purple;
-vertical-align: text-bottom;
+color: black;
 }
 
 .dao {
